ingress/sabnzbd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sabnzbd
spec:
  rules:
  - host: sabnzb.homedns.org
    http:
      paths:
      - path: /
        backend:
          serviceName: sabnzbd
          servicePort: 8080
